--- a/Task4/index.html
+++ b/Task4/index.html
@@ -10,12 +10,21 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="btn-group" role="group" aria-label="Navbar Button Group">
-                <a href="#" class="btn btn-outline-primary">Home</a>
-                <a href="#" class="btn btn-outline-primary">Features</a>
-                <a href="#" class="btn btn-outline-primary">Pricing</a>
-                <a href="#" class="btn btn-outline-primary">Contact</a>
+                <div class="dropdown">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        Home
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Join Us</a></li>
+                        <li><a class="dropdown-item" href="#">Code with Us</a></li>
+                    </ul>
+                </div>
+                <button type="button" class="btn btn-outline-primary">Features</button>
+                <button type="button" class="btn btn-outline-primary">Pricing</button>
+                <button type="button" class="btn btn-outline-primary">Contact</button>
             </div>
         </div>
     </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
