--- a/Task6/index.html
+++ b/Task6/index.html
@@ -2,36 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation using tabs</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Navigation using tabs</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link" href="Home.html">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="AboutUs.html">About us</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="ContactUs.html">Contact us</a>
-        </li>
-    </ul>
+<body class="p-3">
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link" target="content-frame" href="Home.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" target="content-frame" href="AboutUs.html">About us</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" target="content-frame" href="ContactUs.html">Contact us</a>
+    </li>
+  </ul>
 
-    <div class="tab-content mt-3">
-        <div class="tab-pane fade show active" id="home">
-            <a href="Home.html">Go to Home page</a>
-            <p>Welcome to the Home tab!</p>
-        </div>
-        <div class="tab-pane fade" id="about">
-            <p>About us: Tech enthusiast.</p>
-        </div>
-        <div class="tab-pane fade" id="contact">
-            <p>Contact us: Email hardik@gamil.com or call 123-456-7890.</p>
-        </div>
-    </div>
+  <div>
+    <iframe name="content-frame" src="Home.html"></iframe>
+  </div>
 </body>
 </html>
